tests/types/errors/compound_bitwise_to_const.mog
#!strict
const i32 total = 7;
total &= 3;
